RESOLVED FIXED24508
REGRESSION: Setting value of search field programatically does not replace the placeholder text
https://bugs.webkit.org/show_bug.cgi?id=24508
Summary REGRESSION: Setting value of search field programatically does not replace th...
Simon Fraser (smfr)
Reported 2009-03-10 21:03:19 PDT
Setting foo.value on a search field does not cause it to redraw if it has placeholder text.
Attachments
Testcase (put in LayoutTests/fast/repaint) (651 bytes, text/html)
2009-03-10 21:05 PDT, Simon Fraser (smfr)
no flags
Patch, changelog, testcase (5.67 KB, patch)
2009-03-12 13:08 PDT, Simon Fraser (smfr)
adele: review+
Simon Fraser (smfr)
Comment 1 2009-03-10 21:05:37 PDT
Created attachment 28461 [details] Testcase (put in LayoutTests/fast/repaint)
Mark Rowe (bdash)
Comment 2 2009-03-11 03:27:39 PDT
Adele Peterson
Comment 3 2009-03-11 17:23:12 PDT
weird, setValue never gets called on the input element
Adele Peterson
Comment 4 2009-03-11 17:24:10 PDT
Adele Peterson
Comment 5 2009-03-11 17:24:24 PDT
oops, mark already did that.
Alexey Proskuryakov
Comment 6 2009-03-12 10:40:37 PDT
*** Bug 24140 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 7 2009-03-12 13:08:34 PDT
Created attachment 28544 [details] Patch, changelog, testcase
Simon Fraser (smfr)
Comment 8 2009-03-12 13:12:25 PDT
Note You need to log in before you can comment on or make changes to this bug.